--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Party</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <section class="content-1">
+            <h3 class="title-1">Happy New Year</h3>
+            <h3 class="sub-title-1">New Year Party Celebration</h3>
+        </section>
+    </header>
+
+    <main>
+        <section class="content-2">
+            <div class="offer-detail">
+                <h1 class="offer">65% OFF</h1>
+                <h2 class="subtext">OUR HOLIDAY DEALS ARE BETTER</h2>
+                <h2 class="category">ALL CATEGORIES</h2>
+                <img class="newyearimg" src="resources/New Year Photo.png" alt="New Year">
+            </div>
+        </section>
+    </main>
+
+    <footer></footer>
 </body>
+
 </html>
