--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <main>
         <section class="content-2">
-            <div class="offer-detail">
-                <h1 class="offer">65% OFF</h1>
-                <h2 class="subtext">OUR HOLIDAY DEALS ARE BETTER</h2>
-                <h2 class="category">ALL CATEGORIES</h2>
-                <img class="newyearimg" src="resources/New Year Photo.png" alt="New Year">
-            </div>
+            <h1 class="offer">65% OFF</h1>
+            <h4 class="subtext">OUR HOLIDAY DEALS ARE BETTER</h4>
+            <h2 class="category">ALL CATEGORIES</h2>
+            <img class="newyearimg" src="resources/New Year Photo.png" alt="New Year">
         </section>
+
+        <section class="content-3"></section>
     </main>
 
     <footer></footer>
