--- a/index.html
+++ b/index.html
@@ -31,7 +31,40 @@
             <img class="newyearimg" src="resources/New Year Photo.png" alt="New Year">
         </section>
 
-        <section class="content-3"></section>
+        <section class="content-3">
+            <div class="insider-3">
+                <h1 class="title-2">Welcome to midnight party</h1>
+                <p class="sub-title-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <button class="btn-secondary">JOIN NOW</button>
+            </div>
+        </section>
+
+        <section class="content-4">
+            <div class="pdt">
+                <h3><span class="pdt-head">Place:</span> New Park Hotel</h3>
+                <h3><span class="pdt-head">Date:</span> 31 December Night 2023</h3>
+                <h3><span class="pdt-head">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+            </div>
+            <button id="join-now" class="btn-primary">Join Now</button>
+        </section>
+
+        <section class="content-5">
+            <div class="insider-5">
+                <div class="col-1">
+                    <h4 class="text-1">NEW BEST OFFER</h4>
+                    <h2 class="text-2">Coming Soon</h2>
+                    <p class="text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="col-2">
+                    <img class="eclipse" src="resources/Ellipse 1.png" alt="circle">
+                </div>
+                <div class="col-3">
+                    <h2 class="year">2024</h2>
+                    <p class="text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="resources/Group 96.png" alt="happy new year" class="short-logo">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
