--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <p class="sub-title-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
                 <button class="btn-secondary">JOIN NOW</button>
             </div>
+            <div class="right-image">
+                <img src="resources/Group 70.png" alt="" class="right-img">
+            </div>
         </section>
 
         <section class="content-4">
@@ -64,6 +67,23 @@
                     <img src="resources/Group 96.png" alt="happy new year" class="short-logo">
                 </div>
             </div>
+        </section>
+
+        <section class="content-6"></section>
+
+        <section class="content-7"></section>
+        
+        <section class="content-8">
+            <img src="resources/Group 61.png" alt="">
+            <div class="container-subs">
+                <h2 class="subscribe">Subscribe Newsletter</h2>
+                <p class="p-text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <div>
+                    <input class="sub-input" type="email" name="" placeholder="user@gmail.com">
+                    <button class="sub-btn">Subscribe</button>
+                </div>
+            </div>
+                
         </section>
     </main>
 
