--- a/index.html
+++ b/index.html
@@ -71,7 +71,21 @@
 
         <section class="content-6"></section>
 
-        <section class="content-7"></section>
+        <section class="content-7">
+            <div class="insider-7">
+                <h3 class="text-1">THE BEST GIFTS</h3>
+                <h1 class="text-2">Our Awesome Portfolio</h1>
+                <p class="text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <div class="grid">
+                    <img src="resources/1.png" alt="">
+                    <img src="resources/2.png" alt="">
+                    <img src="resources/3.png" alt="">
+                    <img src="resources/4.png" alt="">
+                    <img src="resources/5.png" alt="">
+                    <img src="resources/6.png" alt="">
+                </div>
+            </div>  
+        </section>
         
         <section class="content-8">
             <img src="resources/Group 61.png" alt="">
