--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             </div>
         </section>
 
-        <section class="content-6"></section>
+        <section class="content-6">
+
+        </section>
 
         <section class="content-7">
             <div class="insider-7">
@@ -101,7 +103,30 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="content-9">
+            <div class="insider-footer">
+                <p class="address">44, Big Building Roosevelt Street 
+                    Beach Gardens Florida 33410</p>
+                <div class="phone-web">
+                    <p class="phone"><img src="resources/Call.png" alt="" style="height: 24px;">+00 123 584 124</p>
+                    <p class="web"><img src="resources/Website.png" alt="" style="height: 24px;">www.website.com</p>
+                </div>
+            </div>
+            <hr>
+            <div class="social">
+                <a href="#"><img src="resources/Facebook.png" alt=""></a>
+                <a href="#"><img src="resources/Instagram.png" alt=""></a>
+                <a href="#"><img src="resources/Twitter.png" alt=""></a>
+                <a href="#"><img src="resources/Linkedin.png" alt=""></a>
+            </div>
+            <hr>
+            <div class="insider-footer-2">
+                <p class="phone">2017, All Rights Reserved.</p>
+                <p  class="phone">Unsubscribe</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
