--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="content-3">
             <div class="insider-3">
                 <h1 class="title-2">Welcome to midnight party</h1>
-                <p class="sub-title-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <p class="sub-title-3"> A dazzling fusion of beats and neon brilliance. Join the glow revolution and let the night ignite in a burst of electrifying euphoria!</p>
                 <button class="btn-secondary">JOIN NOW</button>
             </div>
             <div class="right-image">
@@ -56,35 +56,49 @@
                 <div class="col-1">
                     <h4 class="text-1">NEW BEST OFFER</h4>
                     <h2 class="text-2">Coming Soon</h2>
-                    <p class="text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <p class="text-3">Secure your spot at the most unforgettable New Year's bash - premium cocktails, VIP access, and dazzling surprises await!</p>
                 </div>
                 <div class="col-2">
                     <img class="eclipse" src="resources/Ellipse 1.png" alt="circle">
                 </div>
                 <div class="col-3">
                     <h2 class="year">2024</h2>
-                    <p class="text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <p class="text-3"> a new chapter with joy, laughter, and endless possibilities.</p>
                     <img src="resources/Group 96.png" alt="happy new year" class="short-logo">
                 </div>
             </div>
         </section>
 
         <section class="content-6">
-
+            <div class="insider-6">
+                <h4 class="short-text">WHAT IS FUNCTIONAL</h4>
+                <h1 class="big-text"><span class="holiday">Holidays</span> Sale 50%</h1>
+                <p class="big-descript">Dive into the festive spirit with our Holidays Sale 50% - Elevate your celebrations with incredible deals on must-have gifts and cherished finds!</p>
+                <div class="over-img">                  
+                    <div class="disc-rect">
+                        <img id="discount" src="resources/OBJECTS.png" alt="">
+                        <img id="rectangle" src="resources/Rectangle 1.png" alt="">
+                    </div>
+                    <div class="disc-rect-gift"></div>
+                        <!-- <img id="gift" src="resources/Group 75.png" alt=""> -->
+                        <img id="landscape" src="resources/Rectangle-2.png" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="content-7">
             <div class="insider-7">
                 <h3 class="text-1">THE BEST GIFTS</h3>
                 <h1 class="text-2">Our Awesome Portfolio</h1>
-                <p class="text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <p class="text-3">Unveiling Excellence: Explore Our Awesome Portfolio - Where Vision Meets Innovation, Every Project Tells a Success Story!</p>
                 <div class="grid">
-                    <img src="resources/1.png" alt="">
-                    <img src="resources/2.png" alt="">
-                    <img src="resources/3.png" alt="">
-                    <img src="resources/4.png" alt="">
-                    <img src="resources/5.png" alt="">
-                    <img src="resources/6.png" alt="">
+                    <img class="img-item" src="resources/1.png" alt="">
+                    <img class="img-item" src="resources/2.png" alt="">
+                    <img class="img-item" src="resources/3.png" alt="">
+                    <img class="img-item" src="resources/4.png" alt="">
+                    <img class="img-item" src="resources/5.png" alt="">
+                    <img class="img-item" src="resources/6.png" alt="">
                 </div>
             </div>  
         </section>
@@ -93,7 +107,7 @@
             <img src="resources/Group 61.png" alt="">
             <div class="container-subs">
                 <h2 class="subscribe">Subscribe Newsletter</h2>
-                <p class="p-text-3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                <p class="p-text-3">Stay In the Know: Subscribe to Our Newsletter - Your Passport to Exclusive Updates, Offers, and Insider Insights Await!</p>
                 <div>
                     <input class="sub-input" type="email" name="" placeholder="user@gmail.com">
                     <button class="sub-btn">Subscribe</button>
